# pixelbath.com-pyssg

./: .gitignore  README.md  build.py  generate_star_tiles.py  highlighting.py  pyproject.toml  redirects.txt  requirements.txt
.github/workflows/: deploy.yml
src/: .htaccess  fantasy-consoles.md  sidebar.md
src/assets/: _template.aseprite  figures.aseprite
src/drafts/: data-for-good.md
src/pages/: about.md  contact.md  tutorials.md
src/pages/blender-tutorials/: editing-modes.md  index.md  selecting-things.md
src/pages/isometric-pixel-art-guide/: chapter-1-introduction.md  chapter-2-basic-pixel-art.md  chapter-2-basic-shapes.md  chapter-3-colors-outlines-and-lighting.md  chapter-4-texturing.md  index.md
src/pages/work/: index.md  logos-and-branding.md  (+3 more)
src/posts/: adobe-shadow-speed-up-design-on-mobile.md  after-effects-fullscreen-preview.md  building-a-static-site-generator.md  clear-photoshops-swatch-palette.md  csharp-value-does-not-fall-within-expected-range.md  data-for-good.md  fantasy-consoles.md  generative-art-google-logo.md  host-based-ad-blocking.md  hp-color-laserjet-3600-windows-788-1.md  htaccess-snippets.md  new-must-have-ipad-peripheral.md  php-pdf-libraries.md  psa-vertex-and-vertices.md  rom-checksums-and-headers.md  simpless-an-easier-way-of-getting-less-done.md  the-importance-of-order.md  visual-studio-cuddly-braces.md
templates/: layout.html  page.html  post.html  posts.html  rss.xml  style.css
templates/base/: layout.html  page.html  post.html  posts.html  rss.xml  style.css
templates/pixel/: gallery.js  layout.html  style.css
