[project]
name = "pixelbath-com-pyssg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "markdown>=3.10.2",
    "mysql-connector>=2.2.9",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
    "python-frontmatter>=1.1.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]
